--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 	<header>
 		<div class="container container-head">
 			<div id="logo-header">
-				<img src="../img/logo.svg" alt="logo">
+				<img src="img/logo.svg" alt="logo">
 			</div>
 			<div class="contacts">
 				<div>
-					<img src="../img/locate.svg" alt="">
+					<img src="img/locate.svg" alt="">
 					7041 Grand national drive, suite  230, Orlando, FL
 				</div>
 				<div>
-					<img src="../img/phone.svg" alt="">
+					<img src="img/phone.svg" alt="">
 					32819(321) 754-1033
 				</div>
 				<div>
-					<img src="../img/email.svg" alt="">
+					<img src="img/email.svg" alt="">
 					info@lemonjulce.biz
 				</div>
 			</div>
@@ -43,9 +43,9 @@
 					<li class="navigation-link"><a href="#">PROPERTIES</a></li>
 				</ul>
 				<button class="btn-1-page">Owners</button>
-				<button class="btn-img"><img src="../img/nav-btn.svg" alt="eye"></button>
+				<button class="btn-img"><img src="img/nav-btn.svg" alt="eye"></button>
 			</div>
-			<div class="nav-open"><img src="../img/burger.png" alt=""></div>
+			<div class="nav-open"><img src="img/burger.png" alt=""></div>
 		</nav>
 		<div class="page-one_content">
 			<div class="container container-page-one">
@@ -111,7 +111,7 @@
 	<section class="page-four">
 		<div class="container-four">
 			<div class="page-four-about page-four-about-top">
-				<img id="lemon" src="../img/page-four/lemon-1.png" alt="">
+				<img id="lemon" src="img/page-four/lemon-1.png" alt="">
 				<div class="page-four-about-left">
 					<h3 class="page-four-about-title">Our Mission</h3>
 					<p class="page-four-about-text-1">
@@ -128,11 +128,11 @@
 					<button class="page-four-btn button-about">Learn More</button>
 				</div>
 				<div class="page-four-about-right">
-					<img src="../img/page-four/img-top.png" alt="">
+					<img src="img/page-four/img-top.png" alt="">
 				</div>
 			</div>
 			<div class="page-four-about page-four-about-bottom">
-				<img id="lemon-2" src="../img/page-four/lemon-2.png" alt="">
+				<img id="lemon-2" src="img/page-four/lemon-2.png" alt="">
 				<div class="page-four-about-right-b">
 					<h3 class="page-four-about-title">Success stories</h3>
 					<p class="page-four-about-text-1">
@@ -154,7 +154,7 @@
 					<button class="page-four-btn-b button-about">Learn More</button>
 				</div>
 				<div class="page-four-about-left-b">
-					<img src="../img/page-four/img-bottom.png" alt="">
+					<img src="img/page-four/img-bottom.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -164,17 +164,17 @@
 		<div class="container-page-5">
 			<div class="customers-items">
 				<div class="customers-item">
-					<img src="../img/customers/1.svg" alt="">
+					<img src="img/customers/1.svg" alt="">
 					<div class="customers-number">50</div>
 					<p class="customers-text">SEPARATE VILLAS</p>
 				</div>
 				<div class="customers-item">
-					<img src="../img/customers/2.svg" alt="">
+					<img src="img/customers/2.svg" alt="">
 					<div class="customers-number">10</div>
 					<p class="customers-text">YEARS OF EXPERIENCE</p>
 				</div>
 				<div class="customers-item">
-					<img src="../img/customers/3.svg" alt="">
+					<img src="img/customers/3.svg" alt="">
 					<div class="customers-number">85</div>
 					<p class="customers-text">customers</p>
 				</div>
@@ -188,7 +188,7 @@
 			
 			<div class="news-items">
 				<div class="news-item">
-					<img src="../img/news/1.png" alt="">
+					<img src="img/news/1.png" alt="">
 					<div class="news-item-block">
 						<p class="news-item-block-title">Repurpose and Restructure</p>
 						<p class="news-item-block-date">10.04.2020</p>
@@ -202,7 +202,7 @@
 					
 				</div>
 				<div class="news-item">
-					<img src="../img/news/2.png" alt="">
+					<img src="img/news/2.png" alt="">
 					<div class="news-item-block">
 						<p class="news-item-block-title">Repurpose and Restructure</p>
 						<p class="news-item-block-date">10.04.2020</p>
@@ -217,7 +217,7 @@
 					
 				</div>
 				<div class="news-item">
-					<img src="../img/news/3.png" alt="">
+					<img src="img/news/3.png" alt="">
 					<div class="news-item-block">
 						<p class="news-item-block-title">Repurpose and Restructure</p>
 						<p class="news-item-block-date">10.04.2020</p>
@@ -242,7 +242,7 @@
 				<h3 class="testimonials-title">Testimonials</h3>
 				<div class="testimonials-slider">
 					<div class="testimonials-slide slide-1">
-						<img class="testimonials-slide-img" src="../img/testimonials/1.png" alt="">
+						<img class="testimonials-slide-img" src="img/testimonials/1.png" alt="">
 						<h4 class="testimonials-slide-title">“It’s is prime property located right on the sound!”</h4>
 						<p class="testimonials-slide-text">“We love staying at Marina Bay Resort! It is prime property located on the sound! They have a wonderful outdoor heated
 							pool overlooking the sound and a great very large hot tub in their courtyard. They have a game room. A nice place to
@@ -251,7 +251,7 @@
 						<div class="testimonials-slide-user">Stephanie Engle</div>
 					</div>
 					<div class="testimonials-slide slide-2">
-						<img class="testimonials-slide-img" src="../img/testimonials/2.png" alt="">
+						<img class="testimonials-slide-img" src="img/testimonials/2.png" alt="">
 						<h4 class="testimonials-slide-title">“It’s is prime property located right on the sound!”</h4>
 						<p class="testimonials-slide-text">“We love staying at Marina Bay Resort! It is prime property located on the sound!
 							They have a wonderful outdoor heated
@@ -307,13 +307,13 @@
 					</div> -->
 				</div>
 				<div class="testimonials-arrows">
-					<img class="testimonials-arrows-previous" src="../img/testimonials/previous.svg" alt="">
-					<img class="testimonials-arrows-next" src="../img/testimonials/next.svg" alt="">
+					<img class="testimonials-arrows-previous" src="img/testimonials/previous.svg" alt="">
+					<img class="testimonials-arrows-next" src="img/testimonials/next.svg" alt="">
 				</div>
 				<div class="testimonials-dots">
-					<img src="../img/testimonials/1-yellow.svg" alt="">
-					<img src="../img/testimonials/2.svg" alt="">
-					<img src="../img/testimonials/3.svg" alt="">
+					<img src="img/testimonials/1-yellow.svg" alt="">
+					<img src="img/testimonials/2.svg" alt="">
+					<img src="img/testimonials/3.svg" alt="">
 				</div>
 			</div>
 		</div>
@@ -322,7 +322,7 @@
 	<section class="subscribe">
 		<div class="subscribe-questions">
 			<div class="subscribe-questions-img">
-				<img src="../img/questions/bg.png" alt="">
+				<img src="img/questions/bg.png" alt="">
 			</div>
 			<div class="subscribe-questions-block">
 				<h2 class="subscribe-questions-block-title">Frequently Asked Questions</h2>
@@ -412,10 +412,10 @@
 			<div class="footer-social">
 				<p class="footer-social-text">Follow us</p>
 				<div class="footer-social-facebook">
-					<img src="../img/footer/face.svg" alt="">
+					<img src="img/footer/face.svg" alt="">
 				</div>
 				<div class="footer-social-insta">
-					<img src="../img/footer/insta.svg" alt="">
+					<img src="img/footer/insta.svg" alt="">
 				</div>
 			</div>
 		</div>
