--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 	<header>
 		<div class="container container-head">
 			<div id="logo-header">
-				<img src="/img/logo.svg" alt="logo">
+				<img src="img/logo.svg" alt="logo">
 			</div>
 			<div class="contacts">
 				<div>
-					<img src="/img/locate.svg" alt="">
+					<img src="img/locate.svg" alt="">
 					7041 Grand national drive, suite  230, Orlando, FL
 				</div>
 				<div>
-					<img src="/img/phone.svg" alt="">
+					<img src="img/phone.svg" alt="">
 					32819(321) 754-1033
 				</div>
 				<div>
-					<img src="/img/email.svg" alt="">
+					<img src="img/email.svg" alt="">
 					info@lemonjulce.biz
 				</div>
 			</div>
