--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	</header>
 	<!--  -->
 	<section class="page-one">
-		<nav class="navigation">
-			<div class="container">
+		<div class="container container-page-one">
+			<nav class="navigation">
 				<ul class="navigation-list">
 					<li class="navigation-link"><a href="#">HOME</a></li>
 					<li class="navigation-link"><a href="#"><nobr>COVID-19</nobr>></a></li>
@@ -44,17 +44,16 @@
 				</ul>
 				<button class="btn-1-page">Owners</button>
 				<button class="btn-img"><img src="img/nav-btn.svg" alt="eye"></button>
-			</div>
-			<div class="nav-open"><img src="img/burger.png" alt=""></div>
-		</nav>
+
+				<div class="nav-open"><img src="img/burger.png" alt=""></div>
+			</nav>
+		</div>
 		<div class="page-one_content">
-			<div class="container container-page-one">
-				<h1 class="page-one-content-title">
-					Reimagining Resorts
-					A Fresh Perspective
-				</h1>
-				<button class="button page-one-content-btn">Learn More</button>
-			</div>
+			<h1 class="page-one-content-title">
+				Reimagining Resorts
+				A Fresh Perspective
+			</h1>
+			<button class="button page-one-content-btn">Learn More</button>
 		</div>
 	</section>
 	<!--  -->
@@ -329,19 +328,19 @@
 				<div class="subscribe-questions-block-list">
 					<div class="subscribe-questions-block-question-1">
 						<p class="subscribe-questions-block-answer-1" style="cursor:pointer">Sign up with your email address to receive news and updates.?</p>
-						<span>
+						<p id="answer">
 							Aliquam vel sem lacinia, pretium velit sed, efficitur risus. Morbi vehicula gravida enim, vel consequat nulla mollis
 							et.
 							Phasellus porta ullamcorper tincidunt. In laoreet condimentum ex, non imperdiet nulla lacinia a. Cras volutpat, erat
 							eu
 							pretium porta, lectus tortor vulputate ipsum, vehicula lacinia eros sem nec ipsum. Suspendisse efficitur nibh ut
 							placerat placerat. Morbi dapibus ornare turpis vitae tempus cras metus quis a lacus.
-						</span>
+						</p>
 					</div>
 					<div class="subscribe-questions-block-question-2">
 						<p class="subscribe-questions-block-answer-2" style="cursor:pointer">Sign up with your email
 							address to receive news and updates.?</p>
-						<span>
+						<p id="answer">
 							Aliquam vel sem lacinia, pretium velit sed, efficitur risus. Morbi vehicula gravida enim, vel consequat nulla
 							mollis
 							et.
@@ -350,12 +349,12 @@
 							eu
 							pretium porta, lectus tortor vulputate ipsum, vehicula lacinia eros sem nec ipsum. Suspendisse efficitur nibh ut
 							placerat placerat. Morbi dapibus ornare turpis vitae tempus cras metus quis a lacus.
-						</span>
+						</p>
 					</div>
 					<div class="subscribe-questions-block-question-3">
 						<p class="subscribe-questions-block-answer-3" style="cursor:pointer">Sign up with your email
 							address to receive news and updates.?</p>
-						<span>
+						<p id="answer">
 							Aliquam vel sem lacinia, pretium velit sed, efficitur risus. Morbi vehicula gravida enim, vel consequat nulla
 							mollis
 							et.
@@ -364,12 +363,12 @@
 							eu
 							pretium porta, lectus tortor vulputate ipsum, vehicula lacinia eros sem nec ipsum. Suspendisse efficitur nibh ut
 							placerat placerat. Morbi dapibus ornare turpis vitae tempus cras metus quis a lacus.
-						</span>
+						</p>
 					</div>
 					<div class="subscribe-questions-block-question-4">
 						<p class="subscribe-questions-block-answer-4" style="cursor:pointer">Sign up with your email
 							address to receive news and updates.?</p>
-						<span>
+						<p id="answer">
 							Aliquam vel sem lacinia, pretium velit sed, efficitur risus. Morbi vehicula gravida enim, vel consequat nulla
 							mollis
 							et.
@@ -378,7 +377,7 @@
 							eu
 							pretium porta, lectus tortor vulputate ipsum, vehicula lacinia eros sem nec ipsum. Suspendisse efficitur nibh ut
 							placerat placerat. Morbi dapibus ornare turpis vitae tempus cras metus quis a lacus.
-						</span>
+						</p>
 					</div>
 				</div>
 			</div>
